--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,7 +30,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     
     <body>
-        <div>TODO write content</div>
+        <div>
+            <input type="text" id="valueX">
+            <input type="text" id="valueY">
+            <button onclick="submit()">Enviar</button>
+        </div>
         <button onclick="sendPoint()">send point</button>
     </body>
 </html>
