--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,6 +20,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="styles.css">
         <script src="/webjars/jquery/jquery.min.js"></script>
         <script src="/webjars/sockjs-client/sockjs.min.js"></script>
         <script src="/webjars/stomp-websocket/stomp.min.js"></script>
@@ -30,6 +31,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     
     <body>
+        <div>
+            <canvas id="pizarra" width="800" height="600">
+                
+            </canvas>
+        </div>
         <div>
             <input type="text" id="valueX">
             <input type="text" id="valueY">
